--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,17 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<!--<version>1.3.5.RELEASE</version>-->
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.3.7.Final</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
